[gd_scene load_steps=10 format=3 uid="uid://dmny70it2yxs8"]

[ext_resource type="Shader" path="res://UI/BackgroundMenuScroll.gdshader" id="1_fctkd"]
[ext_resource type="Script" path="res://Settings.gd" id="1_m04q4"]
[ext_resource type="Texture2D" uid="uid://dkwpkswggbn7r" path="res://Backgrounds/further_bodies.png" id="2_v7f8u"]
[ext_resource type="Texture2D" uid="uid://dhvixcsrhu5oc" path="res://Backgrounds/closer_bodies.png" id="3_4pudd"]
[ext_resource type="Theme" uid="uid://bdiaebe5x6sb5" path="res://UI/MenuTheme.tres" id="4_ww78m"]
[ext_resource type="FontFile" uid="uid://dbekrgkvpg3lc" path="res://Fonts/SpaceMono-Bold.ttf" id="5_nsie3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_64qqf"]
shader = ExtResource("1_fctkd")
shader_parameter/speed_divider = 10.7

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lb8vd"]
shader = ExtResource("1_fctkd")
shader_parameter/speed_divider = 10.0

[sub_resource type="Theme" id="Theme_t63p7"]
Button/font_sizes/font_size = 32

[node name="Settings" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m04q4")

[node name="FurtherBackground" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_64qqf")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1177.0
offset_top = -1196.0
offset_right = 871.0
offset_bottom = 852.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.2)
texture = ExtResource("2_v7f8u")

[node name="CloserBackground" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_lb8vd")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1177.0
offset_top = -1348.0
offset_right = 871.0
offset_bottom = 700.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.2)
texture = ExtResource("3_4pudd")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_top = 70.0
offset_right = 1280.0
offset_bottom = 790.0
theme = SubResource("Theme_t63p7")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 32
alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_ww78m")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 30
text = "Zvukové efekty"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SoundSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_ww78m")
scrollable = false

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_ww78m")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 30
text = "Hudba"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SoundtrackSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_ww78m")
scrollable = false

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_ww78m")
theme_override_fonts/font = ExtResource("5_nsie3")
text = "Zpět"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -224.0
offset_right = 144.0
offset_bottom = -146.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_ww78m")
text = "Nastavení"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
